scss/_general.scss
// Colors
$tt-text-dark: #333;
$tt-text-light: lighten($tt-text-dark, 30%);
$tt-black-transp: transparentize(black, 0.3);
$tt-yellow: #f2ae0a;
$tt-red: #f63222;
$tt-red-transp: transparentize($tt-red, 0.7);
$tt-orange: #f77529;
$tt-pink: #edccca;
$tt-rose: #f37257;
$tt-rose-transp: transparentize($tt-rose, 0.5);
$tt-sand: #d2b597;
$tt-dark-theme-bg: #100e17;
$tt-dark-theme-bg-transp: transparentize(#100e17, 0.2);
$tt-dark-theme-border: #201c29;
$tt-dark-theme-bg-light: lighten($tt-dark-theme-bg, 5%);
$tt-dark-theme-text: #a1a1af;

// Aurebesh Font
@font-face {
  font-family: "Aurebesh";
  src: url("../fonts/Aurebesh/Aurebesh.eot");
  src: url("../fonts/Aurebesh/Aurebesh.eot") format("embedded-opentype"),
    url("../fonts/Aurebesh/Aurebesh.woff2") format("woff2"),
    url("../fonts/Aurebesh/Aurebesh.woff") format("woff"),
    url("../fonts/Aurebesh/Aurebesh.ttf") format("truetype"),
    url("../fonts/Aurebesh/Aurebesh.svg#Aurebesh") format("svg");
}

// Fluid Typography Styles
$min-width: 320px;
$max-width: 2000px;
$min-font: 16px;
$max-font: 20px;

$h1: 2em;
$h2: 1.7em;
$h3: 1em;

$baseline: 1.5rem;

$article-header-font-family: "SerifGothicStd-Heavy", serif;
$body-font-family: "Lato", sans-serif;
$watermark-font-family: "Aurebesh";

// General styles
html,
body {
  height: 100%;
  margin: 0;
  position: relative;
  font-family: $body-font-family;
  @include fluid-type($min-width, $max-width, $min-font, $max-font);
}

.vertical-align {
  height: 100%;
  display: flex;
  align-items: center;
}

p:not(.tt-cat__card__descr) {
  line-height: 1.75rem;
}

h1 {
  margin-top: calc((#{$baseline} - #{$h1}) + #{$baseline} * 2);
  @include fluid-type($min-width, $max-width, $min-font * 1.5, $max-font * 2.8);
}

h2 {
  margin-top: calc((#{$baseline} - #{$h2}) + #{$baseline} * 2);
  @include fluid-type($min-width, $max-width, $min-font * 1.5, $max-font * 2.1);
  text-transform: uppercase;
}

h3 {
  margin-top: calc((#{$baseline} - #{$h3}) + #{$baseline} * 2);
  @include fluid-type($min-width, $max-width, $min-font * 1.1, $max-font * 1.5);
}

// Vertical Rhythm
h1,
h2,
h3 {
  margin-bottom: $baseline / 2;
  font-family: $article-header-font-family;
  letter-spacing: 3px;
  text-transform: uppercase;
}

// Button styles
.tt-btn {
  min-width: 200px;
  margin-top: 20px;
  padding: 15px 30px;
  color: white;
  border: 3px solid white;
  border-radius: 10em;
  box-shadow: 0 0 0 0 transparent;
  position: relative;
  display: inline-block;
  font-size: 0.7em;
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: 3px;
  text-align: center;
  outline: none !important;
  text-decoration: none;
  transition: all 0.2s ease-in;

  @media (min-width: 768px) {
    padding: 15px 40px;
  }

  &:before {
    content: "";
    width: 0px;
    height: 86%;
    background-color: white;
    box-shadow: 0 0 5px 3px white;
    position: absolute;
    top: 7%;
    left: 0%;
    display: block;
    opacity: 0;
    transform: skewX(-20deg);
  }

  &:hover,
  &:focus {
    color: white;
    border-color: $tt-rose;
    box-shadow: 0 0 30px 0 $tt-rose-transp;
    background-color: $tt-rose;
    text-decoration: none;
    transition: all 0.2s ease-out;
  }

  &:active {
    box-shadow: 0 0 0 0 transparent;
    transition: box-shadow 0.2s ease-in;
  }
}

.tt-btn--cat {
  &:hover,
  &:focus {
    $cat-color: var(--category-color);
    border-color: $cat-color;
    box-shadow: 0 0 5px 0 $cat-color;
    background-color: $cat-color;
  }
}

.tt-btn--alt {
  &:hover,
  &:focus {
    border-color: $tt-red;
    box-shadow: 0 0 30px 0 $tt-red-transp;
    background-color: $tt-red;
  }
}

.tt-header {
  margin-bottom: 40px;

  h1,
  h2,
  h3 {
    display: block;
    position: relative;
    font-family: $article-header-font-family;
  }

  span {
    font-family: Aurebesh;
    font-weight: bold;
    font-size: 0.7em;
    letter-spacing: 5px;
    color: $tt-rose;
  }
}

.tt-header--center {
  text-align: center;

  h1,
  h2,
  h3 {
    padding-left: 0;
    margin: 0 0 60px 0;
    border-left: none !important;

    &:after {
      content: "";
      width: 10%;
      margin-bottom: -25px;
      border-bottom: solid 3px $tt-sand;
      position: absolute;
      left: 45%;
      bottom: 0;
    }
  }
}

#content {
  width: inherit;
  height: inherit;
}

// Search bar styles
.tt-search-bar {
  padding-top: 40px;
  text-align: center;

  input {
    padding: 7px 17px;
    border-radius: 10em;
    border: 3px solid $tt-rose;
    outline: none;
    transition: all 0.2s ease-in-out;

    &::placeholder {
      color: $tt-rose;
      font-family: "Font Awesome 5 Free", Aurebesh, sans-serif;
      font-weight: 900;
      letter-spacing: 3px;
    }

    &:hover,
    &:focus {
      box-shadow: 0 0 5px 0 $tt-rose;
    }
  }
}

// Arrow styles
.tt-arrow {
  &:focus {
    outline: none;
  }

  div {
    width: 30px;
    height: 30px;
    border: 11px solid transparent;
    cursor: pointer;

    @media (min-width: 768px) {
      width: 40px;
      height: 40px;
    }

    &:before,
    &:after {
      content: "";
      width: inherit;
      height: inherit;
      border-bottom: 3px solid $tt-rose-transp;
      border-right: 3px solid $tt-rose-transp;
      position: absolute;
      top: 0;
      left: 0;
      display: block;
      transition: all 0.2s ease-in;
    }

    &:before {
      animation: top-arrow 1.65s infinite;
    }

    &:after {
      animation: bottom-arrow 1.65s infinite;
    }

    &:hover,
    &:focus {
      &:before,
      &:after {
        border-color: $tt-rose;
      }
    }
  }
}

.tt-arrow--left,
.tt-arrow--right {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  z-index: 10;
}

.tt-arrow--left {
  left: 45px;
  div {
    transform: rotate(135deg);
  }
}

.tt-arrow--right {
  right: 45px;
  div {
    transform: rotate(-45deg);
  }
}

.tt-arrow--scroll {
  position: absolute;
  bottom: 50px;
  left: 50%;
  transform: translateX(-50%);

  div {
    transform: rotate(45deg);
  }
}

.tt-arrow--scroll-top {
  position: fixed;
  bottom: 0;
  right: 15px;
  will-change: transform;
  display: none;
  z-index: 99;

  @media (min-width: 768px) {
    right: 25px;
  }

  div {
    transform: rotate(225deg);
  }
}

@include keyframes-compatible(top-arrow) {
  0% {
    transform: translate(-6px, -6px);
  }
  35% {
    transform: translate(0, 0);
  }
  90% {
    opacity: 1;
    transform: translate(0, 0);
  }
  100% {
    opacity: 1;
    transform: translate(0, 0);
  }
}

@include keyframes-compatible(bottom-arrow) {
  0% {
    opacity: 1;
    transform: translate(0, 0);
  }
  45% {
    opacity: 0;
    transform: translate(12px, 12px);
  }
  46% {
    opacity: 0;
    transform: translate(-16px, -16px);
  }
  90% {
    opacity: 1;
    transform: translate(-6px, -6px);
  }
  100% {
    opacity: 1;
    transform: translate(-6px, -6px);
  }
}

// Caption Styles
.tt-caption {
  padding: 5px;
  word-wrap: break-word;
  font-size: 0.7em;
  color: $tt-text-light;
}

// Starfield Styles
.starfield {
  width: 100%;
  height: 100vh;
  position: fixed;
  z-index: -10;
  top: 0;
  left: 0;
}

// Masthead Styles
.tt-masthead {
  height: 0;
  padding-bottom: 56.25%;
  margin-bottom: 50px;

  @media (min-width: 768px) {
    margin-bottom: 80px;
  }

  position: relative;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  overflow: hidden;

  @media (min-width: 768px) {
    padding-bottom: 45.25%;
  }

  @media (min-width: 1600px) {
    padding-bottom: 40.25%;
  }
}

.tt-masthead--overlay:before {
  content: "";
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: transparentize($tt-black-transp, 0.3);
}

.tt-masthead__logo-wrapper {
  width: 80%;

  @media (min-width: 768px) {
    width: 60%;
  }

  @media (min-width: 992px) {
    width: 40%;
  }

  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.tt-masthead__logo {
  width: 100%;
  height: 0;
  padding-bottom: 25%;
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}

// Social Module Styles
.tt-social {
  margin-top: 4vh;
  margin-bottom: 0;
  padding-left: 0;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  list-style-type: none;
}

.tt-social__icon {
  color: white;
  font-size: 1.8em;
  outline: none !important;
  transition: all 0.3s ease-in-out;

  &:hover,
  &:focus {
    color: white;
    text-shadow: 0 0 5px white;
  }
}

// Scrollable Area Styles
.simplebar-scrollbar:before {
  background: $tt-rose-transp;
}

.simplebar-content {
  overflow-x: hidden !important;
}

// Social Warfare Styles
.nc_wrapper.bottom {
  background-color: transparent !important;
}

.nc_wrapper {
  z-index: 9 !important;
}

.simplebar-track.horizontal {
  visibility: hidden !important;
}

